Upload Meta Charset

--- a/PROA - HISTORIA/exercicios/historia.html
+++ b/PROA - HISTORIA/exercicios/historia.html
@@ -3,6 +3,7 @@
         <title>
             Vamos contar uma história?
         </title>
+        <meta charset="UTF-8">
         <link href="css/estilos.css" rel='stylesheet' />
 
         <!-- 
