--- a/PROA - HISTORIA/exercicios/historia.html
+++ b/PROA - HISTORIA/exercicios/historia.html
@@ -3,7 +3,6 @@
         <title>
             Vamos contar uma história?
         </title>
-        <meta charset="UTF-8">
         <link href="css/estilos.css" rel='stylesheet' />
 
         <!-- 
@@ -40,10 +39,18 @@
     </head>
 
     <body>
+        <header>
+            <nav>
+                <div class="nav-container">
+                    <input type="button" value="Tema claro" onclick="mudarEstilosClaro()">
+                    <input type="button" value="Tema noturno" onclick="mudarEstilosNot()">
+                </div>
+            </nav>
+        </header>
         <div id='conteudo'>
 
         </div>
-        <script src='js/historia.js'></script>
+        <script src='js\historia.js'></script>
     </body>
 
 </html>
