--- a/PROA - HISTORIA/exercicios/historia.html
+++ b/PROA - HISTORIA/exercicios/historia.html
@@ -42,8 +42,7 @@
         <header>
             <nav>
                 <div class="nav-container">
-                    <input type="button" value="Tema claro" onclick="mudarEstilosClaro()">
-                    <input type="button" value="Tema noturno" onclick="mudarEstilosNot()">
+                    <input type="button" value="Alterar Tema" onclick="mudarEstilosNot()">
                 </div>
             </nav>
         </header>
